prevent fullname wrapping

--- a/backend/web/css/style.css
+++ b/backend/web/css/style.css
@@ -1,3 +1,7 @@
+#OrdersTable td
+{
+    white-space: nowrap;
+}
 .td-actions{
     white-space: nowrap;
 }
